--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Revival Minecraft Earth",
-  "short_name": "MCEarth",
+  "short_name": "MCREVIVE",
   "description": "An AR project to revive Minecraft Earth using the Vienna Docker",
   "start_url": "/",
   "scope": "/",
